--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+
 :root {
   --white: hsl(0, 0%, 100%);
   --light-grey: hsl(212, 45%, 89%);
@@ -10,30 +12,71 @@
   margin: 0;
   box-sizing: border-box;
 }
+html {
+  width: 100%;
+  height: 100%;
+}
 body {
   width: 100%;
   height: 100%;
-  border: 1px solid black;
+  background-color: var(--light-grey);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .card {
-  border: 1px solid red;
   width: 90%;
   max-width: 385px;
   height: 100%;
   max-height: 612px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding: 1rem;
+  background-color: white;
+  border-radius: 20px;
 }
 figure {
-  border: 1px solid yellow;
   margin: 0;
   padding: 0;
+  flex-basis: 60%;
 }
 figure img {
-  width: 250px;
-  height: 250px;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.card-details {
+  margin-top: 2rem;
+  font-family: "Outfit", sans-serif;
+  width: 100%;
+  min-height: 200px;
+  flex-basis: 40%;
+
+  padding-left: 0.7rem;
+  padding-right: 0.7rem;
+}
+.card-details h1 {
+  color: var(--dark-blue);
+  font-weight: 700;
+  font-size: 1.5rem;
+  text-align: center;
+}
+.card-details h2 {
+  margin-top: 2rem;
+
+  color: gray;
+  font-weight: 400;
+  text-align: center;
+  font-size: 1rem;
+}
+
+@media only screen and (min-width: 1440px) {
+  .card-details {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .card-details h2 {
+    font-size: 1.2rem;
+  }
 }
